--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,7 +3,7 @@
 # For more details, see: https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 
 # Default owners for everything in the repo
-* @Stedi/technical-writers, @Stedi/engineering
+* @Stedi/technical-writers @Stedi/engineering
 
 # Do not request review for dep-only upgrades
 package.json
