Modify review request rules for JSON files
remove *.json from files that require approval

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,9 +5,5 @@
 # Default owners for everything in the repo
 * @Stedi/technical-writers @Stedi/engineering
 
-# Do not request review for dep-only upgrades
-package.json
-package-lock.json
-pnpm-lock.yaml
-**/package.json
-**/package-lock.json
+# Do not request review for automated changes
+*.json
